@@ -161,25 +161,7 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>
-                        <!-- Few examples ... only pick the ones needed -->
-                        <arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.impl.dtd=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.xni.parser=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.net.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.internal.interfaces=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.provider.certpath=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.internal.spec=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.action=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-                    </compilerArgs>
+
                 </configuration>
             </plugin>
             <plugin>
